# bromance

./: .gitignore  AGENT.md  NETWORKING.md  build.zig  build.zig.zon
.github/: PULL_REQUEST_TEMPLATE.md
.opencode/: preferences.md
api/: Cargo.toml  build.rs  data.db  verify.sh
api/migrations/: 20231210000000_create_users_table.sql
api/src/: error.rs  main.rs  rest.rs
api/src/handlers/: auth.rs
api/src/models/: user.rs
api/src/rpc/: auth.rs
docs/: world_and_autotiling.md
game/: AGENT.md  REVIEW.md  TESTING.md  build.zig  build.zig.zon
game/assets/: README.txt  plots.json  world.json  world_edit.json  world_output.json  worldoutput.json
game/docs/: ARCHITECTURE_SUMMARY.md  GAME_LOOP_DESIGN.md  LOCK_FREE_QUEUE.md  MIGRATIONS.md  PLOT_LAYOUT.md  PLOT_OWNERSHIP_PLAN.md  PLOT_SYSTEM.md  SQLITE_THREADING.md  TESTING_GUIDE.md  VOICE_CHAT_DESIGN.md  camera_and_tile_seams.md  tile_system_notes.md  world_and_autotiling.md
game/src/: main.zig  network.zig  server_main.zig  shared.zig  state.zig  tile_inspector.zig  tiles_test.zig
game/src/character/: player.zig
game/src/client/: game_state.zig  http_client.zig  udp_client.zig
game/src/core/: assets.zig  context.zig  scene_action.zig  scene_manager.zig
game/src/db/: migrations.zig  player_store.zig  player_store_test.zig
proto/: auth.proto
src/: client.zig  main.zig  network.zig  renderer.zig  server_main.zig  shapes.glsl.zig  shared.zig  world_loader.zig
src/character/: player.zig
src/client/: udp_client.zig
src/map/: model.zig
src/movement/: command.zig
src/ui/: hud.zig
(+28 files in other folders)
